--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_spinkit: ^5.1.0
   fluttertoast: ^8.0.9
   uuid: ^3.0.6
+  iconly: ^1.0.1
 
 dev_dependencies:
   flutter_test:
